<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    app:columnCount="2">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_android_studio_tutorials"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:src="@mipmap/ic_launcher_android_studio_tutorials"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_android_studio_tutorials"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/android_studio_tutorials"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_english_with_lidia"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:src="@mipmap/ic_launcher_english_with_lidia"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_english_with_lidia"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/english_with_lidia"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_low_brightness"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:src="@mipmap/ic_launcher_low_brightness"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_low_brightness"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/low_brightness"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_music_sleep_timer"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:src="@mipmap/ic_launcher_music_sleep_timer"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_music_sleep_timer"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/music_sleep_timer"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_qr_and_code_scanner"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:src="@mipmap/ic_launcher_qr_codes_scanner"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_qr_code_scanner"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/qr_code_scanner"
        android:textStyle="bold" />

</androidx.gridlayout.widget.GridLayout>