<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="112dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/grid_layout_buttons"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/original"
                android:textColor="?attr/colorPrimary" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_view_original_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:scaleType="centerCrop" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/optimized"
                android:textColor="?attr/colorPrimary" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_view_optimized_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:scaleType="centerCrop" />
        </LinearLayout>
    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ad_view">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_choose_image"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="6dp"
            android:text="@string/choose_image"
            app:icon="@drawable/ic_perm_media"
            app:iconGravity="textTop"
            app:layout_columnWeight="1"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_optimize_image"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="12dp"
            android:text="@string/optimize_image"
            app:icon="@drawable/ic_auto_awesome"
            app:iconGravity="textTop"
            app:layout_columnWeight="1"
            tools:ignore="VisualLintButtonSize" />
    </androidx.gridlayout.widget.GridLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5294151573817700/5086233158"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>