<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.App.Starting.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.App.Starting.PopupOverlay" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/linear_layout_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frame_layout_main"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:visibility="visible">

                <ProgressBar
                    android:id="@+id/progress_bar_scan"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/background_progress_bar"
                    android:indeterminate="false"
                    android:max="1"
                    android:progress="0"
                    android:progressDrawable="@drawable/progress_bar" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_percentage"
                    style="@style/TextAppearance.Material3.DisplaySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/main_progress_0"
                    android:textColor="?attr/colorPrimary"
                    app:fontFamily="@font/font_poppins" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="128dp"
                    android:layout_height="66dp"
                    android:layout_gravity="bottom|center"
                    android:src="@drawable/ic_clean" />
            </FrameLayout>

            <me.zhanghai.android.fastscroll.FastScrollScrollView
                android:id="@+id/scroll_view_files"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="4"
                android:animateLayoutChanges="true"
                android:background="@drawable/card"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/linear_layout_files"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical" />
            </me.zhanghai.android.fastscroll.FastScrollScrollView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_status"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="24dp"
                android:text="@string/status"
                android:textColor="?attr/colorPrimary"
                app:fontFamily="@font/font_poppins" />

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/grid_layout_buttons"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                app:layout_constraintBottom_toTopOf="@id/ad_view">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_clean"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="6dp"
                    android:text="@string/clean"
                    android:tooltipText="@string/tooltip_button_clean"
                    app:icon="@drawable/ic_broom"
                    app:iconGravity="textTop"
                    app:layout_columnWeight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_analyze"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/analyze"
                    android:tooltipText="@string/tooltip_button_analyze"
                    app:icon="@drawable/ic_search"
                    app:iconGravity="textTop"
                    app:layout_columnWeight="1" />
            </androidx.gridlayout.widget.GridLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/ad_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-5294151573817700/5086233158"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header"
        app:itemTextAppearance="@style/FontTheme"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>